--- a/srcs/frontend/css/global.css
+++ b/srcs/frontend/css/global.css
@@ -8,17 +8,11 @@
   --background-color: #1F1F1F;
   --font-family-main: "Krona One", sans-serif;
   --font-family-alt: "Kumbh Sans", sans-serif;
-  --font-size-base: 16px;
+  --font-size-base: 1rem;
   --font-size-xl: 1.5rem;
   --font-size-md: 0.875rem;
   --font-size-sm: 0.75rem;
   --font-size-xs: 0.625rem;
-	--breakpoint-xs: 400px;
-  --breakpoint-sm: 600px;
-	--breakpoint-md: 900px;
-	--breakpoint-lg: 1280px;
-	--breakpoint-xl: 1440px;
-	--breakpoint-xxl: 1920px;
 }
 
 * {
@@ -32,11 +26,8 @@
   box-sizing: border-box;
 }
 
-/* Ensure html and body take up the full height of the viewport */
 html, body {
   height: 100%;
-  margin: 0;
-  padding: 0;
   display: flex;
   flex-direction: column;
 }
@@ -54,7 +45,7 @@ main {
   flex: 1;
   max-width: 1100px;
   width: 90%;
-  margin: 5em auto;
+  margin: 3em auto;
   display: flex;
   align-items: center;
   flex-direction: column;
@@ -77,44 +68,9 @@ footer {
 
 .font--alt {
   font-family: var(--font-family-alt);
-  font-optical-sizing: auto;
-  font-weight: 400;
-  font-style: normal;
   font-variation-settings: "YOPQ" 300;
-}
-
-.font-size--xl {
-  font-size: var(--font-size-xl);
-}
-
-.font-size--lg {
-  font-size: var(--font-size-base);
-}
-
-.font-size--md {
-  font-size: var(--font-size-md);
-}
-
-.font-size--sm {
-  font-size: var(--font-size-sm);
-}
-
-.font-size--xs {
-  font-size: var(--font-size-xs);
 }
 
 h1 {
   font-size: var(--font-size-xl);
-}
-
-@media (max-width: var(--breakpoint-md)) {
-  html {
-    font-size: 80%;
-  }
-}
-
-@media (max-width: var(--breakpoint-sm)) {
-  html {
-    font-size: 62.5%;
-  }
 }
