--- a/srcs/backend/tournament/templates/tournament/tournament_full_lobby.html
+++ b/srcs/backend/tournament/templates/tournament/tournament_full_lobby.html
@@ -1,15 +1,18 @@
-<section id="tournament-lobby-section" class="full {% if num_players == 2 %}two-players{% endif %}">
+<section
+  id="tournament-lobby-section"
+  class="full {% if num_players == 2 %}two-players{% endif %}"
+>
   {% if is_final %}
-    <h1 class="tournament_lobby__header">BEEPONG CUP FINALS STARTING IN <span id="countdown">3</span>...</h1>
+  <h1 class="tournament_lobby__header">
+    BEEPONG CUP FINALS STARTING IN <span id="countdown">3</span>...
+  </h1>
   {% else %}
-    <h1 class="tournament_lobby__header">BEEPONG CUP IS STARTING IN <span id="countdown">3</span>...</h1>
+  <h1 class="tournament_lobby__header">
+    BEEPONG CUP IS STARTING IN <span id="countdown">3</span>...
+  </h1>
   {% endif %}
-  <p class="tournament_lobby__description font--alt font-size--sm">{{ match_players.0 }} vs {{ match_players.1 }}</p>
-  
+  <p class="tournament_lobby__description font--alt font-size--sm">
+    {{ match_players.0 }} vs {{ match_players.1 }}
+  </p>
   {% include 'tournament/tournament_name_list.html' %}
-  <div class="game-info__container">
-    <div id="score-player1" class="score">0</div>
-    <div id="score-player2" class="score">0</div>
-  </div>
-  <canvas id="game_canvas" width="800" height="500"></canvas>
 </section>
