--- a/srcs/backend/beePong/templates/beePong/home.html
+++ b/srcs/backend/beePong/templates/beePong/home.html
@@ -8,7 +8,7 @@
 					<p>Play solo against our vicious AI or gather friends and let the tournament decide who's the queen bee 🐝</p>
 				</div>
 				<div class="button-group--column">
-					<button class="button--primary button--with-icon" onclick="navigate(`{% url 'tournament:tournament' %}`, '/tournament')">
+					<button class="button--primary button--with-icon" onclick="navigate(`{% url 'tournament:tournament' %}`, `{% url 'tournament:tournament' %}`)">
 						TOURNAMENT
 						<img src="/img/arrow.svg" alt="arrow" width="21" height="12">
 					</button>
