--- a/srcs/backend/tournament/templates/tournament/tournament_winner.html
+++ b/srcs/backend/tournament/templates/tournament/tournament_winner.html
@@ -3,5 +3,5 @@
 	
 	{% include 'tournament/tournament_name_list.html' %}
 	
-	<button class="button--primary" onclick="navigate(`{% url 'tournament:tournament' %}`, '/tournament')">BACK TO TOURNAMENTS</button>
+	<button class="button--primary" onclick="navigate(`{% url 'tournament:tournament' %}`, `{% url 'tournament:tournament' %}`)">BACK TO TOURNAMENTS</button>
 </section>
