--- a/srcs/backend/tournament/templates/tournament/create_tournament.html
+++ b/srcs/backend/tournament/templates/tournament/create_tournament.html
@@ -6,16 +6,16 @@
 				<form onsubmit="handleFormSubmit(event)" action="{{ form_action }}">
 					{% csrf_token %}
 					<div>
-						<label for="id_title">Title</label>
+						<label for="{{ form.title.id_for_label }}">Title</label>
 						{{ form.title }}
 					</div>
 					<div>
-						<label for="id_description">Description</label>
+						<label for="{{ form.description.id_for_label }}">Description</label>
 						{{ form.description }}
 					</div>
-					<div>
-						<label for="id_num_players">Number of players</label>
-						<div class="radio-group" id="id_num_players">
+					<fieldset>
+						<legend class="legend--hidden">Number of players</legend>
+						<div class="radio-group">
 							{% for id, label in form.num_players.field.choices %}
 							<div>
 								<input
@@ -32,7 +32,7 @@
 							</div>
 							{% endfor %}
 						</div>
-					</div>
+					</fieldset>
 					<div class="form__actions">
 						<button type="submit" class="button--primary">CREATE</button>
 					</div>
