--- a/srcs/backend/tournament/templates/tournament/tournament_game.html
+++ b/srcs/backend/tournament/templates/tournament/tournament_game.html
@@ -1,7 +1,7 @@
-<section id="tournament-lobby-section">
-  <div class="game-info__container">
-    <div id="score-player1" class="score">0</div>
-    <div id="score-player2" class="score">0</div>
+<section id="tournament-lobby-section" class="tournament_game">
+  <div class="tournament_game__game-info-container">
+    <div id="alias-player1" class="alias"></div>
+    <div id="alias-player2" class="alias"></div>
   </div>
   <canvas id="game_canvas" width="800" height="500"></canvas>
 </section>
