--- a/srcs/backend/beePong/templates/beePong/home.html
+++ b/srcs/backend/beePong/templates/beePong/home.html
@@ -12,7 +12,7 @@
 						TOURNAMENT
 						<img src="/img/arrow.svg" alt="arrow" width="21" height="12">
 					</button>
-					<button class="button--secondary button--with-icon" onclick="navigate(`{% url 'beePong:game' %}`)">
+					<button class="button--secondary button--with-icon" onclick="navigate(`{% url 'tournament:solo_game' %}`)">
 						SOLO GAME
 						<img src="/img/arrow.svg" alt="arrow" width="21" height="12">
 					</button>
