add backend logic for the solo game

--- a/srcs/backend/tournament/templates/tournament/solo_game.html
+++ b/srcs/backend/tournament/templates/tournament/solo_game.html
@@ -1,9 +1,7 @@
 <section id="tournament-lobby-section" class="tournament_game">
   <div class="tournament_game__game-info-container">
-    <!-- <div id="alias-player1" class="alias"></div>
-    <div id="alias-player2" class="alias"></div> -->
-		<div id="alias-player1" class="alias">test</div>
-    <div id="alias-player2" class="alias">test</div>
+    <div id="alias-player1" class="alias"></div>
+    <div id="alias-player2" class="alias"></div>
   </div>
   <canvas id="game_canvas" width="800" height="500"></canvas>
 </section>
