Connect AI bot player (#98)
* add ai register as a new user and add delay so it refresh game view once per sec

* add keep-alive to request header in ai.py and lower game speed, debug WIP

* disable to ping from both ai_bot sides and PongConsumer, get rid of 1011 (internal error) but game state not updated, WIP

* ai_bot connection stay alive & received game state DOES get updated, but realll slow, debug WIP

* debug msg to show delayed time in game state update and try switching to aiohttp, WIP

* desperate effort to see if ai_bot could run from frontend

* put movement logic to its own function

* ai tracks game state probably and can hit the ball ok half the time, improvement WIP

* AI bot plays with questionable skill but still...

* add solo game

* make a form for solo game

* open websocket for solo game

* fix error handling, extract id from url

* start ai tournament

* add nginx cert volumes for AI access to compose

* create tournament in solo game

* add backend logic for the solo game

* AI bot join tourney successfully, receives game update and send its move alright

* add has_active_tournament, remove the solo game from tournament page

* change AI logic to assume AI has right paddle instead of left

* AI bot is triggered successfully from create_solo_game

* confirm both regular tournament and solo game works. Debugging solo winner page

* fix winner page

* apply restriction that the AI can only refresh its view of the game once per second

---------

Co-authored-by: wengcychan <wengcychan@yahoo.com.hk>
Co-authored-by: Diego James <die.james.talamas@gmail.com>

--- a/srcs/backend/beePong/templates/beePong/home.html
+++ b/srcs/backend/beePong/templates/beePong/home.html
@@ -12,13 +12,17 @@
 						TOURNAMENT
 						<img src="/img/arrow.svg" alt="arrow" width="21" height="12">
 					</button>
-					<button class="button--secondary button--with-icon" onclick="navigate(`{% url 'beePong:game' %}`)">
-						SOLO GAME
-						<img src="/img/arrow.svg" alt="arrow" width="21" height="12">
-					</button>
+					<form onsubmit="handleFormSubmit(event)" action="{{ form_action }}">
+						{% csrf_token %}
+						<button class="button--secondary button--with-icon">
+							SOLO GAME
+							<img src="/img/arrow.svg" alt="arrow" width="21" height="12">
+						</button>
+					</form>
 				</div>
 			</div>
 		</div>
+		<div class="form__error-message"></div>
 		<p class="card__note">*created by 5 ultra talented Hive Helsinki students. Tech stuff <a id="github-link" href="https://github.com/BeePong/42_transcendence">here -></a></p>
 	</div>
 </section>
