--- a/srcs/frontend/css/button.css
+++ b/srcs/frontend/css/button.css
@@ -1,85 +1,74 @@
 button {
-	padding: 0.5em 1.5em;
-	cursor: pointer;
+  padding: 0.5em 1.5em;
+  cursor: pointer;
 }
 
 .button--primary {
-	background-color: var(--color-primary);
-	color: var(--text-color-alt);
-	box-shadow: 5px 5px var(--color-secondary);
+  background-color: var(--color-primary);
+  color: var(--text-color-alt);
+  box-shadow: 5px 5px var(--color-secondary);
 }
 
 .button--secondary {
-	background-color: var(--color-secondary);
-	color: var(--text-color-alt);
-	box-shadow: 5px 5px var(--color-primary);
-	width: 100%;
+  background-color: var(--color-secondary);
+  color: var(--text-color-alt);
+  box-shadow: 5px 5px var(--color-primary);
+  width: 100%;
 }
 
 .button--tertiary {
-	outline: 1px solid var(--text-color-main);
-	width: 100%;
+  outline: 1px solid var(--text-color-main);
+  width: 100%;
 }
 
 .button--with-icon {
-	display: flex;
-	align-items: center;
-	justify-content: space-between;
-	text-align: left;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  text-align: left;
 }
 
 .button--fortytwo {
-	width: 80%;
-	padding: 0.5em 1.5em;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	gap: 8px;
+  width: 80%;
+  padding: 0.5em 1.5em;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 8px;
 }
 
 #github-link {
-	text-decoration: underline;
-}
-
-.cross-icon {
-	position: relative;
-	width: 10%;
-}
-
-.cross-icon::before, .cross-icon::after {
-	content: '';
-	position: absolute;
-	background-color: var(--text-color-main);
-	width: 100%;
-	height: 2px;
-	transform: translateY(-50%) rotate(45deg);
-}
-
-.cross-icon::after {
-	transform: translateY(-50%) rotate(-45deg);
+  text-decoration: underline;
 }
 
 .plus-icon {
-	position: relative;
-	width: 16px;
-	margin-right: 0.5em;
+  position: relative;
+  width: 16px;
+  margin-right: 0.5em;
 }
 
-.plus-icon::before, .plus-icon::after {
-	content: '';
-	position: absolute;
-	background-color: var(--text-color-alt);
-	width: 100%;
-	height: 1px;
+.plus-icon::before,
+.plus-icon::after {
+  content: "";
+  position: absolute;
+  background-color: var(--text-color-alt);
+  width: 100%;
+  height: 1px;
 }
 
 .plus-icon::after {
-	transform: translateY(-50%) rotate(90deg);
+  transform: translateY(-50%) rotate(90deg);
 }
 
 .button-group--column {
   display: flex;
   flex-direction: column;
-	gap: 1em;
-	margin-bottom: 1em;
+  gap: 1em;
+  margin-bottom: 1em;
+}
+
+.button--left-bottom-corner {
+  position: absolute;
+  bottom: 40px;
+  right: 40px;
 }
