add placeholder for redirect url and text in winner page

--- a/srcs/backend/tournament/templates/tournament/tournament_winner.html
+++ b/srcs/backend/tournament/templates/tournament/tournament_winner.html
@@ -8,10 +8,7 @@
 
   {% include 'tournament/tournament_name_list.html' %}
 
-  <button
-    class="button--primary"
-    onclick="navigate(`{% url 'tournament:tournament' %}`, `{% url 'tournament:tournament' %}`)"
-  >
-    BACK TO TOURNAMENTS
+  <button class="button--primary" onclick="navigate('{{ redirect_url }}')">
+    {{ redirect_text }}
   </button>
 </section>
