add protection for getElement

--- a/srcs/backend/tournament/templates/tournament/tournament_full_lobby.html
+++ b/srcs/backend/tournament/templates/tournament/tournament_full_lobby.html
@@ -2,12 +2,10 @@
   id="tournament-lobby-section"
   class="full {% if num_players == 2 %}two-players{% endif %}"
 >
-  <h1 class="tournament_lobbyheader">
+  <h1 class="tournament_lobby__header">
     BEEPONG CUP IS STARTING IN <span id="countdown">3</span>...
   </h1>
-  <p class="tournament_lobbydescription font--alt">
-
-  </p>
+  <p class="tournament_lobby__description font--alt"></p>
 
   {% include 'tournament/tournament_name_list.html' %}
 </section>
